<resources>
    <string name="app_name">HourSMS</string>
    <string name="action_settings">Settings</string>
    <string name="save_button">Save</string>
    <string name="message_hint">Message</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="status_label">Status:</string>
    <string name="inactiveStatus">Inactive</string>
    <string name="activeStatus">Active</string>
    <string name="dataSaved">Data saved</string>
    <string name="sendingHalted">Sending halted</string>
    <string name="serviceActive">Service active</string>
    <string name="show_phone">Phone:</string>
    <string name="show_message">Message:</string>
    <string name="special_message">Мен ли ще спамиш we :@</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_phone_title">Phone number</string>
    <string name="pref_phone"></string>
    <string name="pref_message">Your message</string>
    <string name="pref_message_title">Message</string>


    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="start_time">Start time</string>
    <string name="repetition_interval">Repetition interval</string>

</resources>
