<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!--
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />
        <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

   -->
    <EditTextPreference
        android:defaultValue="@string/pref_phone"
        android:key="phone"
        android:inputType="phone"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_phone_title" />

    <EditTextPreference
        android:defaultValue="@string/pref_message"
        android:inputType="text"
        android:key="message"
        android:selectAllOnFocus="true"
        android:title="@string/pref_message_title"
        />



    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


        <stoyanoff.hoursms.TimePreference
            android:defaultValue="0"
            android:key="timePrefA_Key"
            android:title="@string/start_time"/>

    <stoyanoff.hoursms.TimePreference
        android:defaultValue="3600000"
        android:key="timePrefB_Key"
        android:title="Repeat interval"/>




</PreferenceScreen>
