<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="stoyanoff.hoursms.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_light">

    <com.andexert.library.RippleView
        android:id="@+id/rippleStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        rv_centered="true"
        android:layout_marginTop="110dp"
        android:layout_below="@+id/showMessageText"
        android:layout_centerHorizontal="true">

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/startButton"
        android:onClick="startButtonClick"
        android:background="@android:color/holo_green_light" />
    </com.andexert.library.RippleView>

    <com.andexert.library.RippleView
        android:id="@+id/rippleStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        rv_centered="true"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/rippleStartButton"
        android:layout_alignLeft="@+id/rippleStartButton"
        android:layout_alignStart="@+id/rippleStartButton"
        >
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_button"
        android:id="@+id/stopButton"
        android:onClick="stopButtonClick"
        android:background="@android:color/holo_red_light" />
    </com.andexert.library.RippleView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/status_label"
        android:textSize="24sp"
        android:id="@+id/textView"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="62dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:allowUndo="false"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/show_phone"
        android:textSize="24sp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:allowUndo="false"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/show_message"
        android:id="@+id/textView3"
        android:textSize="24sp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:allowUndo="false"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/statusText"
        android:textSize="24sp"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/showPhoneText"
        android:textSize="24sp"
        android:layout_above="@+id/textView3"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/showMessageText"
        android:textSize="24sp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/specialText"
        android:textSize="24sp"
        android:layout_marginTop="140dp"
        android:layout_below="@+id/rippleStopButton"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    </RelativeLayout>

</ScrollView>

